--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,18 +12,18 @@
     /*display: block;*/
 }
 
-.scale{
+.scale {
     /*transition: 0.5s;*/
     display: inline-block;
     overflow: hidden;
 }
 
-.scale img{
+.scale img {
     transition: 0.5s;
     display: block;
 }
 
-.scale img:hover{
+.scale img:hover {
     transform: scale(1.2);
 }
 
@@ -59,9 +59,41 @@ a:hover {
     text-align: center;
 }
 
-.titleBlock{
+.titleBlock {
     font-size: 80px;
     font-weight: bold;
+}
+
+.sidebar {
+    /*background-color: red;*/
+    display: block;
+    /*padding-left: 5%;*/
+    border-right: 1px solid #343a40;
+}
+
+.content-box{
+    padding: 0 7% 0 7%;
+}
+
+.card-img-top{
+    padding: 3% 7% 3% 7%;
+}
+
+.card-text{
+    text-align: left;
+}
+
+.sidebar ul {
+    margin-left: 0;
+    padding-left: 0;
+}
+
+.sidebar li {
+    list-style-type: none;
+}
+
+.sidebar a{
+    text-decoration: none;
 }
 
 @media screen and (max-width: 768px) {
@@ -85,7 +117,7 @@ a:hover {
         padding-left: 46px;
     }
 
-    .titleBlock{
+    .titleBlock {
         font-size: 40px;
     }
 }
@@ -96,7 +128,7 @@ a:hover {
         padding-left: 58px;
     }
 
-    .titleBlock{
+    .titleBlock {
         font-size: 20px;
     }
 }
@@ -106,7 +138,7 @@ a:hover {
         padding-left: 46px;
     }
 
-    .titleBlock{
+    .titleBlock {
         font-size: 15px;
     }
 }
