--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+/*my css code*/
 * {
     padding: 0;
     margin: 0;
@@ -5,11 +6,8 @@
 
 .contain {
     background: #343a40;
-    /*height: 59px;*/
-    /*box-sizing: border-box;*/
     border-bottom: 1px solid #000000;
     width: 100%;
-    /*display: block;*/
 }
 
 .scale {
@@ -46,17 +44,9 @@ a:hover {
     padding-left: 10px;
 }
 
-.card {
-    background: #eeeeee;
-}
-
 .welcomeBlock {
     text-align: center;
     padding: 191px;
-}
-
-.card-text {
-    text-align: center;
 }
 
 .titleBlock {
@@ -65,22 +55,16 @@ a:hover {
 }
 
 .sidebar {
-    /*background-color: red;*/
     display: block;
-    /*padding-left: 5%;*/
     border-right: 1px solid #343a40;
 }
 
-.content-box{
+.content-box {
     padding: 0 7% 0 7%;
 }
 
-.card-img-top{
+.content-box-img {
     padding: 3% 7% 3% 7%;
-}
-
-.card-text{
-    text-align: left;
 }
 
 .sidebar ul {
@@ -92,8 +76,74 @@ a:hover {
     list-style-type: none;
 }
 
-.sidebar a{
+.sidebar a {
     text-decoration: none;
+}
+
+/*edit css code*/
+
+.card-text {
+    text-align: left;
+}
+
+.card-text {
+    text-align: center;
+}
+
+.card {
+    background: #eeeeee;
+}
+
+/*test css*/
+
+.red {
+    background-color: red;
+}
+
+.item1 {
+    grid-area: topBar;
+    /*height: 60px;*/
+    /*padding-top: 10px;*/
+    /*height: 5%;*/
+    padding: 10px 0 10px 0;
+}
+
+.item2 {
+    grid-area: avatar;
+}
+
+.item2 img {
+    width: 100%;
+}
+
+.item3 {
+    grid-area: profileInfo;
+}
+
+.item4 {
+    grid-area: someInfo;
+}
+
+.item5 {
+    grid-area: wallContent;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-areas: 'topBar topBar topBar topBar topBar topBar topBar'
+    'avatar avatar profileInfo profileInfo profileInfo profileInfo profileInfo'
+    'someInfo someInfo wallContent wallContent wallContent wallContent wallContent';
+    grid-gap: 1px;
+    background-color: red;
+    padding: 10px;
+}
+
+.grid-container > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    /*text-align: center;*/
+    /*padding: 20px 0;*/
+    padding: 1% 10% 1% 10%;
+    font-size: 17px;
 }
 
 @media screen and (max-width: 768px) {
