--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,7 @@
 }
 
 .scale img:hover {
+    /*display: block;*/
     transform: scale(1.2);
 }
 
@@ -47,6 +48,7 @@ a:hover {
 .welcomeBlock {
     text-align: center;
     padding: 191px;
+    background-color: #a5b8cb;
 }
 
 .titleBlock {
@@ -55,12 +57,18 @@ a:hover {
 }
 
 .sidebar {
-    display: block;
-    border-right: 1px solid #343a40;
+    /*display: block;*/
+    /*border-right: 1px solid #343a40;*/
 }
 
 .content-box {
     padding: 0 7% 0 7%;
+    /*width: 100%;*/
+}
+
+.content-box a{
+    font-weight: bold;
+    text-decoration: none;
 }
 
 .content-box-img {
@@ -87,25 +95,18 @@ a:hover {
 }
 
 .card-text {
-    text-align: center;
+    text-align: left;
 }
 
 .card {
     background: #eeeeee;
+    /*width: 124%;*/
 }
 
 /*test css*/
 
 .red {
     background-color: red;
-}
-
-.item1 {
-    grid-area: topBar;
-    /*height: 60px;*/
-    /*padding-top: 10px;*/
-    /*height: 5%;*/
-    padding: 10px 0 10px 0;
 }
 
 .item2 {
@@ -116,8 +117,22 @@ a:hover {
     width: 100%;
 }
 
+.item2 button{
+    margin: 10px 0 10px 0;
+    /*margin: auto;*/
+}
+
 .item3 {
     grid-area: profileInfo;
+}
+
+.item3 a{
+    font-weight: bold;
+    text-decoration: none
+}
+
+.item3 ul{
+    padding: 0 0 0 10px;
 }
 
 .item4 {
@@ -127,15 +142,22 @@ a:hover {
 .item5 {
     grid-area: wallContent;
 }
+.item5 a{
+    font-weight: bold;
+    text-decoration: none;
+}
 
 .grid-container {
     display: grid;
-    grid-template-areas: 'topBar topBar topBar topBar topBar topBar topBar'
-    'avatar avatar profileInfo profileInfo profileInfo profileInfo profileInfo'
-    'someInfo someInfo wallContent wallContent wallContent wallContent wallContent';
-    grid-gap: 1px;
-    background-color: red;
-    padding: 10px;
+    grid-template-areas:
+    'avatar avatar profileInfo profileInfo profileInfo profileInfo '
+    'someInfo someInfo wallContent wallContent wallContent wallContent ';
+    'someInfo someInfo wallContent wallContent wallContent wallContent ';
+    /*grid-gap: 2px;*/
+    background-color: #cacaca;
+    padding: 20px 5px 10px 5px;
+    /*display: block;*/
+    /*border-left: 1px solid #343a40;*/
 }
 
 .grid-container > div {
@@ -192,4 +214,3 @@ a:hover {
         font-size: 15px;
     }
 }
-
