--- a/public/css/style.css
+++ b/public/css/style.css
@@ -168,7 +168,10 @@ a:hover {
     font-size: 17px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
+    .col-sm-6{
+        padding-top: 30px;
+    }
     .card {
         background: #eeeeee;
         width: 80%;
@@ -194,7 +197,41 @@ a:hover {
     }
 }
 
+@media screen and (max-width: 768px) {
+    .col-sm-6{
+        padding-top: 30px;
+    }
+    .card {
+        background: #eeeeee;
+        width: 80%;
+        margin-top: 10px;
+    }
+
+    .card-text {
+        text-align: center;
+        font-size: 10px;
+    }
+
+    .tline {
+        flex-direction: column;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        width: 50%;
+        padding-left: 46px;
+    }
+
+    .titleBlock {
+        font-size: 40px;
+    }
+}
+
 @media screen and (max-width: 576px) {
+    .col-sm-6{
+        padding-top: 30px;
+        padding-left: 20%;
+    }
     .tline {
         width: 60%;
         padding-left: 58px;
